tests/tasknet_files/valid/tasknet10_verify.tn
tasknet VerifyModeTest {
  end = 200;

  timelines {
    power : state(on, off) = off;
  }

  taskdef BaseTask {
    duration 30;
  }

  task T1 : BaseTask;
  task T2 : BaseTask;
  optional task T3 {
    impacts {
      pre {
        power = on;
      }
    }
  }

  properties {
    prop p1: always (power = off);
  }
}
